# mtproxy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  ENTRY_POINT_COMPLETION.md  MIGRATION_STATS_SUMMARY.md  MIGRATION_STATUS.md  Makefile  PLAN.md  PR_SUMMARY.md  README.md  SAFETY_ESTABLISHMENT.md  SERVER_FUNCTIONS_MIGRATION.md  compile_flags.txt  errors  justfile  proxy-multi.conf
baseline/: LATEST  README.md
common/: common-stats.c  common-stats.h  cpuid.c  cpuid.h  kprintf.c  kprintf.h  kprintf_wrapper.c  md5.c  md5.h  mp-queue-rust.c  mp-queue-rust.h  mp-queue.c  mp-queue.h  parse-config.c  parse-config.h  pid.c  pid.h  precise-time.c  precise-time.h  proc-stat.c  proc-stat.h  resolver.c  resolver.h  sha1.c  (+12 more)
mtproxy-bin/: Cargo.toml
mtproxy-bin/src/: entrypoint.rs  main.rs
mtproxy-bin/src/runtime/bootstrap/: mod.rs  server_functions.rs
rust/mtproxy-bin/: Cargo.toml  STEP15_REMAINING_C_UNITS.txt
rust/mtproxy-bin/src/: entrypoint.rs  lib.rs  main.rs
rust/mtproxy-bin/src/runtime/: mod.rs
rust/mtproxy-bin/src/runtime/bootstrap/: server_functions.rs
rust/mtproxy-ffi/: BOUNDARY.md  Cargo.toml
rust/mtproxy-ffi/include/: mtproxy_ffi.h  vv_io_ffi.h  vv_tree_ffi.h
rust/mtproxy-ffi/src/: compat.rs  crypto.rs  ffi_consts.rs  ffi_types.rs  ffi_util.rs  jobs.rs  kprintf.rs  lib.rs  mp_queue.rs  mtproto.rs  net_connections.rs  net_events.rs  net_msg.rs  net_rpc_targets_legacy.rs  net_stats_legacy.rs  net_thread_legacy.rs  net_timers.rs  printf_compat.rs  server_functions.rs  stats.rs  tests.rs  time_cfg_observability.rs  tl_parse_methods.rs  vv_io.rs  vv_tree.rs
rust/mtproxy-ffi/src/compat/: core.rs  ffi.rs
rust/mtproxy-ffi/src/crypto/: core.rs  ffi.rs  mod.rs
rust/mtproxy-ffi/src/engine/: core.rs  ffi.rs
rust/mtproxy-ffi/src/engine_rpc/: core.rs  ffi.rs
rust/mtproxy-ffi/src/ffi_consts/: core.rs
rust/mtproxy-ffi/src/ffi_types/: core.rs
rust/mtproxy-ffi/src/jobs/: core.rs  ffi.rs
rust/mtproxy-ffi/src/kprintf/: core.rs
rust/mtproxy-ffi/src/mp_queue/: core.rs
rust/mtproxy-ffi/src/mtproto/: core.rs  ffi.rs  mod.rs
rust/mtproxy-ffi/src/net_connections/: abi.rs  core.rs  ffi.rs  legacy.rs  mod.rs  runtime.rs
rust/mtproxy-ffi/src/net_events/: abi.rs  core.rs  ffi.rs
rust/mtproxy-ffi/src/net_http_server/: core.rs  ffi.rs
rust/mtproxy-ffi/src/net_msg/: abi.rs  core.rs  ffi.rs  mod.rs
rust/mtproxy-ffi/src/net_msg_buffers/: core.rs  ffi.rs
rust/mtproxy-ffi/src/net_rpc_targets/: core.rs  ffi.rs
rust/mtproxy-ffi/src/net_tcp_connections/: core.rs
rust/mtproxy-ffi/src/net_tcp_rpc_client/: core.rs  ffi.rs
rust/mtproxy-ffi/src/net_tcp_rpc_common/: core.rs  ffi.rs
rust/mtproxy-ffi/src/net_tcp_rpc_ext_server/: core.rs  ffi.rs  legacy.rs
rust/mtproxy-ffi/src/net_tcp_rpc_server/: core.rs  ffi.rs  legacy.rs
rust/mtproxy-ffi/src/net_timers/: core.rs
rust/mtproxy-ffi/src/server_functions/: core.rs  ffi.rs  mod.rs
rust/mtproxy-ffi/src/stats/: core.rs
rust/mtproxy-ffi/src/tests/: core.rs  mod.rs
rust/mtproxy-ffi/src/time_cfg_observability/: core.rs
rust/mtproxy-ffi/src/tl_parse/: abi.rs  core.rs  ffi.rs  mod.rs
rust/mtproxy-ffi/src/vv_io/: core.rs
rust/mtproxy-ffi/src/vv_tree/: core.rs
(+273 files in other folders)
