[package]
name = "mtproxy-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mtproxy-rust"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
mtproxy-core = { path = "../mtproxy-core" }
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.31", features = ["resource", "user"] }
signal-hook = "0.4"
rustix = { version = "1.1", features = ["process"] }

[lints]
workspace = true
