[package]
name = "mtproxy-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
mtproxy-core = { path = "../mtproxy-core" }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
