[package]
name = "mtproxy-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
hmac = "0.12"
libc = "0.2"
md-5 = "0.10"
mtproxy-bin = { path = "../mtproxy-bin" }
mtproxy-core = { path = "../mtproxy-core" }
num-bigint = "0.4"
num-traits = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["sync"] }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
